# deterministic_physics_2d

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
src/: aaa.cpp  aaa_unused.cpp  aabb.h  circle.h  m.h  phys_body.h  phys_obj.h  quad_tree.h  quad_tree_node.h  rect.h  rigid.h  transform.h  type_alias.h  vec2.h  world.h
src/collider/: circle_collider.h  collider.h  collider_circle.h  collider_enum.h  collider_polygon.h  edge_collider.h  polygon_collider.h
src/shapes/: circle.h  edge.h  polygon.h  polygon_edge_iter.h  shape.h
src/utils/: sat.h  transform.h
testbed/: case.h  main.cpp  mainloop.h  render.h  render_collider.h  render_shapes.h  sprite.h
testbed/cases/: case-1.h
tests/: test_world.cpp
